@@ -18,6 +18,7 @@ package org.apache.activemq.artemis.utils;
 
 import java.security.AccessController;
 import java.security.PrivilegedAction;
+import java.util.Collections;
 import java.util.HashMap;
 import java.util.Map;
 import java.util.ServiceLoader;
@@ -184,7 +185,7 @@ public final class PasswordMaskingUtil {
             // Service load the codec, if a service is available
             for (SensitiveDataCodec<String> codec : serviceLoader) {
                if (codec.getClass().getCanonicalName().equals(codecClassName)) {
-                  return codec.getClass().newInstance();
+                  return codec.getClass().getDeclaredConstructor().newInstance();
                }
             }
          } catch (Exception e) {
@@ -192,38 +193,47 @@ public final class PasswordMaskingUtil {
          }
          try {
             // If a service is not available, load the codec class using this class's class loader
-            return (SensitiveDataCodec<String>) PasswordMaskingUtil.class.getClassLoader().loadClass(codecClassName).newInstance();
+            return (SensitiveDataCodec<String>) PasswordMaskingUtil.class.getClassLoader().loadClass(codecClassName).getDeclaredConstructor().newInstance();
          } catch (Exception e) {
             try {
                // As a last resort, load the codec class using the current thread's context class loader
-               return (SensitiveDataCodec<String>) Thread.currentThread().getContextClassLoader().loadClass(codecClassName).newInstance();
+               return (SensitiveDataCodec<String>) Thread.currentThread().getContextClassLoader().loadClass(codecClassName).getDeclaredConstructor().newInstance();
             } catch (Exception e2) {
                throw ActiveMQUtilBundle.BUNDLE.errorCreatingCodec(codecClassName, e2);
             }
          }
       });
 
+      Map<String, String> props = new HashMap<>();
       if (parts.length > 1) {
-         Map<String, String> props = new HashMap<>();
-
          for (int i = 1; i < parts.length; i++) {
             String[] keyVal = parts[i].split("=");
             if (keyVal.length != 2)
                throw ActiveMQUtilBundle.BUNDLE.invalidProperty(parts[i]);
             props.put(keyVal[0], keyVal[1]);
          }
-         try {
-            codecInstance.init(props);
-         } catch (Exception e) {
-            throw new ActiveMQException("Fail to init codec", e, ActiveMQExceptionType.SECURITY_EXCEPTION);
-         }
+      }
+      try {
+         codecInstance.init(props);
+      } catch (Exception e) {
+         throw new ActiveMQException("Fail to init codec", e, ActiveMQExceptionType.SECURITY_EXCEPTION);
       }
 
       return codecInstance;
    }
 
    public static DefaultSensitiveStringCodec getDefaultCodec() {
-      return new DefaultSensitiveStringCodec();
+      return getDefaultCodec(Collections.emptyMap());
+   }
+
+   public static DefaultSensitiveStringCodec getDefaultCodec(Map<String, String> params) {
+      DefaultSensitiveStringCodec defaultCodec = new DefaultSensitiveStringCodec();
+      try {
+         defaultCodec.init(params);
+      } catch (Exception e) {
+         throw ActiveMQUtilBundle.BUNDLE.errorCreatingCodec(DefaultSensitiveStringCodec.class.getName(), e);
+      }
+      return defaultCodec;
    }
 
 }
